# MufExprtkBackend

./: .gitignore  CMakeLists.txt  MufExprtkBackend.pri  MufExprtkBackend.pro  README.md
src/: mufexprtkbackend.cpp  mufexprtkbackend.h
